--- a/scss/partials/_login.scss
+++ b/scss/partials/_login.scss
@@ -2,11 +2,11 @@
 
 .box{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 500px;
-    padding: 80px;
+    width: 450px;
+    padding: 70px;
     border-radius: 20px;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #333333;
@@ -30,7 +30,7 @@
         border-radius: 24px;
         transition: 0.25s;
     }
-    input[type= "text"]:focus,.box input[type= "password"]:focus{
+    input[type= "text"]:focus, input[type= "password"]:focus{
         width: 280px;
         border-color: #474787;
     }
@@ -50,6 +50,34 @@
     }
     input[type = "submit"]:hover{
         background: #474787;
+    }
+}
+@media screen and (max-width:800px) {
+    .box{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        width: 400px;
+        padding: 35px;
+        border-radius: 20px;
+        position: absolute;
+        top: 36%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #333333;
+        text-align: center;
+    }
+}
+@media screen and (max-width:380px) {
+    .box{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        width: 300px;
+        padding: 40px;
+        border-radius: 20px;
+        position: absolute;
+        top: 36%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #333333;
+        text-align: center;
     }
 }
 
