--- a/scss/sass2.scss/_mixins.scss
+++ b/scss/sass2.scss/_mixins.scss
@@ -4,7 +4,7 @@
 
 @mixin grids-artist ($dis, $margin-left, $columnas, $espacio, $ancho) {
     display: $dis;
-    margin-left: $margin-left;
+    margin-left: 4rem;
     grid-template-columns: repeat($columnas, 1fr);
     gap: $espacio;
     .artist {
@@ -12,13 +12,15 @@
     }
     @media screen and (max-width:900px) {
         display: $dis;
+        margin-right: 3rem;
         grid-template-columns: repeat(4, 1fr);
         gap: $espacio;
     }
     @media screen and (max-width:600px) {
         display: $dis;
+        margin-left: 3rem;
         grid-template-columns: repeat(3,1fr);
-        gap: $espacio;
+        gap: 1em;
     }
     @media screen and (max-width:380px) {
         display: $dis;
@@ -32,7 +34,7 @@
 
 @mixin grids-albums {
     display: $dis;
-    margin: $margin-left ;
+    margin-left: $margin-left ;
     grid-template-columns: repeat(4, 1fr);
     gap: 1em;
     .grid-albums{
@@ -59,7 +61,7 @@
 
     @mixin grids-podcast{
         display: $dis;
-        margin: 1rem;
+        margin: 3rem;
         grid-template-columns: repeat(2,1fr);
         gap: 3rem;
         .grid-albums{
@@ -82,7 +84,8 @@
 
 @mixin grids-mix {
     display: $dis;
-    margin: $margin-left ;
+    margin-left: $margin-left ;
+    margin-bottom: $margin-left;
     grid-template-columns: repeat(4, 1fr);
     gap: 3em;
     .grid-mix{
