hicimos cambios dentro de shop.html

--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -5,7 +5,7 @@
 }
 
 .title{
-    font-family: 'Bebas Neue', cursive;
+    font-family:'Bebas Neue',capital letter;
     font-size: 90px;
     margin-top: 2em;
 }
