--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@
   background-size: 100vw 100vh; }
 
 .title {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Bebas Neue',capital letter;
   font-size: 90px;
   margin-top: 2em; }
 
@@ -282,61 +282,55 @@
     margin-left: 50px; } }
 
 /*HTML SHOP*/
-.grid-caja-shop {
-  width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 40px 0;
+.grid-shop {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 40px; }
-
-.instrumentos {
-  width: 225px;
-  height: 225px;
-  border-radius: 10px; }
-
-@media screen and (max-width: 900px) {
-  .grid-caja-shop {
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px; }
-  .instrumentos {
-    width: 225px;
-    height: 225px;
-    border-radius: 10px; } }
-
-@media screen and (max-width: 600px) {
-  .grid-caja-shop {
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px; }
-  .instrumentos {
-    width: 180px;
-    height: 180px;
-    border-radius: 10px; } }
-
-@media screen and (max-width: 380px) {
-  .grid-caja-shop {
-    width: 55%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 40px; }
-  .instrumentos {
-    width: 155px;
-    height: 175px;
-    border-radius: 10px; } }
+  margin: 4rem;
+  gap: 5em; }
+  .grid-shop .card {
+    height: 100%;
+    padding: .8em;
+    background: #f5f5f5;
+    position: relative;
+    overflow: visible;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+    .grid-shop .card .card-img {
+      height: 100%;
+      width: 100%;
+      border-radius: .5rem;
+      transition: .3s ease; }
+    .grid-shop .card .card-info {
+      padding-top: 10%; }
+    .grid-shop .card svg {
+      width: 20px;
+      height: 20px; }
+    .grid-shop .card .card-footer {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 10px;
+      border-top: 1px solid #ddd; }
+    .grid-shop .card .text-title {
+      font-weight: 900;
+      font-size: 1.2em;
+      line-height: 1.5; }
+    .grid-shop .card .text-body {
+      font-size: .9em;
+      padding-bottom: 10px; }
+    .grid-shop .card .card-button {
+      border: 1px solid #252525;
+      display: flex;
+      padding: .3em;
+      cursor: pointer;
+      border-radius: 50px;
+      transition: .3s ease-in-out; }
+    .grid-shop .card .card-img:hover {
+      transform: translateY(-25%);
+      box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px; }
+    .grid-shop .card .card-button:hover {
+      border: 1px solid  #198754;
+      background-color: #198754; }
 
 .one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
   display: flex;
@@ -375,17 +369,11 @@ body {
 a:hover {
   color: orange !important; }
 
-h2:hover {
-  color: orange !important; }
-
-h1:hover {
-  color: orange !important; }
-
 h2 {
   margin-top: 5em;
   margin-bottom: 1em;
   text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Bebas Neue',capital letter;
   color: #ffff;
   font-size: 3rem; }
 
@@ -393,20 +381,22 @@ h1 {
   margin-top: 5em;
   margin-bottom: 1em;
   text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Bebas Neue', capital letter;
   color: #ffff;
   font-size: 3rem; }
 
 .h1 {
   text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 1em;
+  font-size: 4rem;
+  font-family: 'Bebas Neue',capital letter;
   color: #ffff; }
 
 .pie-pagina {
   width: 100%;
   background-color: #161719;
   position: absolute;
-  bottom: 0;
+  bottom: -110px;
   padding: 2em 0;
   display: flex;
   justify-content: center; }
