--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -17,12 +17,7 @@ body{
 a:hover{
     color: $color !important;
 }
-h2:hover{
-    color: $color !important;
-}
-h1:hover{
-    color: $color !important;
-}
+
 
 
 
@@ -30,7 +25,7 @@ h2{
     margin-top: 5em ;
     margin-bottom: 1em;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Bebas Neue',capital letter;
     color: #ffff;
     font-size: 3rem;
 }
@@ -40,14 +35,16 @@ h1{
     margin-top: 5em ;
     margin-bottom: 1em;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Bebas Neue', capital letter;
     color: #ffff;
     font-size: 3rem;
 }
 
 .h1{
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 1em;
+    font-size: 4rem;
+    font-family: 'Bebas Neue',capital letter;
     color: #ffff;
 }
 
@@ -55,7 +52,7 @@ h1{
     width: 100%;
     background-color: #161719;
     position:absolute;
-    bottom: 0;
+    bottom: -110px;
     padding: 2em 0;
     display: flex;
     justify-content: center;
