--- a/scss/partials/_shop.scss
+++ b/scss/partials/_shop.scss
@@ -1,64 +1,70 @@
 /*HTML SHOP*/
 
-.grid-caja-shop{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0;
+.grid-shop{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
+    margin: $margin-left;
+    gap: 5em;
+    .card {
+
+        height: 100%;
+        padding: .8em;
+        background: #f5f5f5;
+        position: relative;
+        overflow: visible;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        .card-img {
+            height: 100%;
+            width: 100%;
+            border-radius: .5rem;
+            transition: .3s ease;
+        }
+        .card-info {
+            padding-top: 10%;
+        }
+        svg {
+            width: 20px;
+            height: 20px;
+        }
+        .card-footer {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 10px;
+            border-top: 1px solid #ddd;
+        }
+        .text-title {
+            font-weight: 900;
+            font-size: 1.2em;
+            line-height: 1.5;
+        }
+        
+        .text-body {
+            font-size: .9em;
+            padding-bottom: 10px;
+        }
+        .card-button {
+            border: 1px solid #252525;
+            display: flex;
+            padding: .3em;
+            cursor: pointer;
+            border-radius: 50px;
+            transition: .3s ease-in-out;
+        }
+        .card-img:hover {
+            transform: translateY(-25%);
+            box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+        }
+        .card-button:hover {
+        border: 1px solid  #198754;
+        background-color:  #198754;
+    }
+    
+    }
 }
-.instrumentos{
-    width: 225px;
-    height: 225px;
-    border-radius: 10px;
-}
-@media screen and (max-width:900px) {
-    .grid-caja-shop{
-        width: 90%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 40px;
-    }
-    .instrumentos{
-        width: 225px;
-        height: 225px;
-        border-radius: 10px;
-    }
-}
-@media screen and (max-width:600px) {
-    .grid-caja-shop{
-        width: 90%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 40px;
-    }
-    .instrumentos{
-        width: 180px;
-        height: 180px;
-        border-radius: 10px;
-    }
-}
-@media screen and (max-width:380px) {
-    .grid-caja-shop{
-        width: 55%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 40px;
-    }
-    .instrumentos{
-        width: 155px;
-        height: 175px;
-        border-radius: 10px;
-    }
-}
+
+
+
+
+
