--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "partials/login";
 @import "partials/playlist";
 @import "partials/shop";
+@import "partials/about";
 @import "partials/all";
 @import "sass2.scss/mixins";
 @import "sass2.scss/extend";
