--- a/css/style.css
+++ b/css/style.css
@@ -1,125 +1,124 @@
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
 
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
 
 .grid-artist {
-  display: grid;
-  margin-left: 4rem;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 2em; }
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
   .grid-artist .artist {
-    border-radius: 1em; }
-  @media screen and (max-width: 900px) {
-    .grid-artist {
-      display: grid;
-      margin-right: 3rem;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 2em; } }
-  @media screen and (max-width: 600px) {
-    .grid-artist {
-      display: grid;
-      margin-left: 3rem;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1em; } }
-  @media screen and (max-width: 380px) {
-    .grid-artist {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      margin-left: 5rem; }
-      .grid-artist .artist {
-        width: 70%; } }
+    margin-bottom: 35px;
+    border-radius: 10px; }
 
 .grid-albums {
-  display: grid;
-  margin-left: 4rem;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1em; }
-  @media screen and (max-width: 900px) {
-    .grid-albums {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      margin-left: 15%; } }
-  @media screen and (max-width: 600px) {
-    .grid-albums {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2em;
-      margin-left: 1rem; } }
-  @media screen and (max-width: 380px) {
-    .grid-albums {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      gap: 2em;
-      margin-left: 3rem; } }
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .grid-albums .album {
+    margin-bottom: 35px; }
 
 .grid-podcast {
-  display: grid;
-  margin: 3rem;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 3rem; }
-  @media screen and (max-width: 900px) {
-    .grid-podcast {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr); } }
-  @media screen and (max-width: 600px) {
-    .grid-podcast {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr); } }
-  @media screen and (max-width: 380px) {
-    .grid-podcast {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr); } }
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .grid-podcast .podcast {
+    margin: 10px 20px; }
 
 .grid-mix {
-  display: grid;
-  margin-left: 4rem;
-  margin-bottom: 4rem;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 3em; }
-  @media screen and (max-width: 900px) {
-    .grid-mix {
-      display: grid;
-      margin-left: 15%;
-      grid-template-columns: repeat(2, 1fr); } }
-  @media screen and (max-width: 600px) {
-    .grid-mix {
-      display: grid;
-      margin-left: 3%;
-      grid-template-columns: repeat(2, 1fr); } }
-  @media screen and (max-width: 380px) {
-    .grid-mix {
-      display: grid;
-      margin-left: 3rem;
-      grid-template-columns: repeat(1, 1fr); } }
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .grid-mix .mix {
+    margin-bottom: 35px; }
+
+@media screen and (min-width: 480px) {
+  .grid-artist {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 4rem; } }
+
+@media screen and (min-width: 680px) {
+  .grid-artist {
+    grid-template-columns: repeat(3, 1fr); }
+  .grid-albums {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 4rem; }
+  .grid-podcast {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); }
+  .grid-mix {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 4rem; } }
+
+@media screen and (min-width: 900px) {
+  .grid-artist {
+    margin-left: 7rem; }
+  .grid-albums {
+    margin-left: 8rem; }
+  .grid-mix {
+    margin-left: 8rem; } }
+
+@media screen and (min-width: 1024px) {
+  .grid-artist {
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 4rem; }
+  .grid-albums {
+    margin-left: 10rem;
+    gap: 1em; }
+  .grid-podcast {
+    margin: 3rem; }
+  .grid-mix {
+    margin-left: 10rem;
+    gap: 3em; } }
+
+@media screen and (min-width: 1200px) {
+  .grid-artist {
+    grid-template-columns: repeat(6, 1fr);
+    margin-left: 4rem;
+    gap: 2em; }
+  .grid-albums {
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 4rem;
+    gap: 1em; }
+  .grid-podcast {
+    margin: 3rem;
+    gap: 3rem; }
+  .grid-mix {
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 4rem;
+    gap: 3em; } }
 
 .bg-image {
   background-image: url("../img/imagen-fondo-concierto.jpg");
   background-size: 100vw 100vh; }
 
 .title {
-  font-family: 'Bebas Neue',capital letter;
   font-size: 90px;
-  margin-top: 2em; }
+  margin-top: 2em;
+  color: #ffff; }
 
 .start {
   display: flex;
@@ -129,17 +128,22 @@
 
 .color-de-fondo {
   background-color: #161719;
-  width: 245px;
+  color: #d08540;
+  border-color: #d08540;
   height: 60px;
   font-size: 2em;
   font-weight: bold; }
+
+.color-de-fondo:hover {
+  background-color: #d08540;
+  color: #ffff; }
 
 .up {
   position: fixed;
   border-radius: 7px;
   width: 50px;
   height: 50px;
-  background-color: #198754;
+  background-color: #d08540;
   color: #161719;
   bottom: 40px;
   right: 50px;
@@ -159,129 +163,110 @@
     font-size: 1em;
     font-weight: bold; } }
 
-/*HTML LOGIN*/
-.box {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 450px;
-  padding: 70px;
-  border-radius: 20px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #333333;
-  text-align: center; }
-  .box h1 {
-    text-transform: uppercase;
-    font-weight: 500;
-    background-color: #333333; }
-  .box input[type="text"], .box input[type="password"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #218c74;
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: #ffff;
-    border-radius: 24px;
-    transition: 0.25s; }
-  .box input[type="text"]:focus, .box input[type="password"]:focus {
-    width: 280px;
-    border-color: #474787; }
-  .box input[type="submit"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #474787;
-    padding: 14px 40px;
-    outline: none;
-    color: #ffff;
-    border-radius: 24px;
-    transition: 0.25s;
-    cursor: pointer; }
-  .box input[type="submit"]:hover {
-    background: #474787; }
+/*LOGIN*/
+.login {
+  margin-top: 3em;
+  height: 70vh; }
+  .login .img-login {
+    background-size: cover;
+    background-position: center center;
+    width: 50%; }
+  .login .ingresar {
+    background-color: #161719;
+    width: 30%; }
+    .login .ingresar .formulario {
+      padding: 2.5em; }
+      .login .ingresar .formulario .welcome {
+        font-size: 3em;
+        margin-top: 0;
+        margin-bottom: 0; }
+      .login .ingresar .formulario .sesion {
+        color: #c0c4d6;
+        font-size: 20px;
+        text-align: center; }
+      .login .ingresar .formulario .password-olvidada a {
+        color: #c0c4d6;
+        display: inline-block;
+        margin-top: 0.5em; }
+      .login .ingresar .formulario .input label {
+        display: block;
+        color: #c0c4d6;
+        font-weight: bold;
+        margin: 1em 0; }
+      .login .ingresar .formulario .input input {
+        width: 100%;
+        padding: 6px 14px;
+        border-radius: 5px; }
 
-@media screen and (max-width: 800px) {
-  .box {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 400px;
-    padding: 35px;
-    border-radius: 20px;
-    position: absolute;
-    top: 36%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #333333;
-    text-align: center; } }
-
-@media screen and (max-width: 380px) {
-  .box {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 300px;
-    padding: 40px;
-    border-radius: 20px;
-    position: absolute;
-    top: 36%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #333333;
-    text-align: center; } }
-
-/*HTML PLAYLIST*/
-.container-playlist {
+.submit {
+  font-weight: bold;
+  color: #d08540;
+  border-color: #d08540;
   width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 40px 0; }
+  margin-top: 1em; }
+
+.submit:hover {
+  background-color: #d08540;
+  color: #ffff; }
+
+@media screen and (min-width: 768px) {
+  .login {
+    display: flex;
+    justify-content: center; }
+  .img-login {
+    height: auto; } }
+
+/*PLAYLIST*/
+.one-direction-twice-carpenter-r5 {
+  display: flex;
+  justify-content: center; }
+
+.ids-itiel-agape-alex {
+  display: flex;
+  justify-content: center; }
+
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
+  display: flex;
+  justify-content: center; }
+
+.one-direction-twice-carpenter-r5 {
+  display: flex;
+  justify-content: center; }
+
+.ids-itiel-agape-alex {
+  display: flex;
+  justify-content: center; }
+
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
+  display: flex;
+  justify-content: center; }
 
 .grid-playlist {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px; }
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .grid-playlist .playlist {
+    margin-top: 35px; }
 
-@media screen and (max-width: 900px) {
-  .container-playlist {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0; }
+@media screen and (min-width: 768px) {
   .grid-playlist {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-    margin-left: 50px; } }
+    margin-left: 4rem; } }
 
-@media screen and (max-width: 600px) {
-  .container-playlist {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0; }
+@media screen and (min-width: 1024px) {
   .grid-playlist {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-    margin-left: 50px; } }
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 4rem; } }
 
-@media screen and (max-width: 380px) {
-  .container-playlist {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0; }
+@media screen and (min-width: 1200px) {
   .grid-playlist {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 40px;
-    margin-left: 50px; } }
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 10rem; } }
 
-/*HTML SHOP*/
+/*SHOP*/
 .grid-shop {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -329,30 +314,103 @@
       transform: translateY(-25%);
       box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px; }
     .grid-shop .card .card-button:hover {
-      border: 1px solid  #198754;
-      background-color: #198754; }
+      border: 1px solid #d08540;
+      background-color: #d08540; }
 
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+@media screen and (min-width: 300px) {
+  .grid-shop {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); } }
+
+@media screen and (min-width: 600px) {
+  .grid-shop {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 4rem;
+    gap: 5em; } }
+
+@media screen and (min-width: 900px) {
+  .grid-shop {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 4rem;
+    gap: 5em; } }
+
+.about {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .about .content {
+    width: 1280px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around; }
+    .about .content img {
+      height: auto;
+      width: 600px;
+      max-width: 100%; }
+    .about .content .text {
+      width: 550px;
+      max-width: 100%;
+      padding: 0 10px; }
+      .about .content .text .titulo {
+        color: #d08540;
+        display: flex;
+        font-size: 75px;
+        margin-bottom: 20px;
+        margin-top: 0;
+        text-transform: capitalize; }
+      .about .content .text p {
+        color: #c0c4d6;
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 1px;
+        margin-bottom: 45px; }
+      .about .content .text .know-more {
+        font-weight: bold;
+        color: #d08540;
+        border-color: #d08540; }
+      .about .content .text .know-more:hover {
+        background-color: #d08540;
+        color: #ffff; }
+
+@media screen and (max-width: 1180px) {
+  .about {
+    width: 100%;
+    height: auto;
+    padding: 70px 0px; }
+    .about .content img {
+      height: auto;
+      width: 600px;
+      max-width: 100%;
+      margin-bottom: 10px; } }
+
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
 
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
 
@@ -367,30 +425,38 @@ body {
   min-height: 100vh; }
 
 a:hover {
-  color: orange !important; }
+  color: #d08540 !important; }
+
+.search {
+  color: #d08540;
+  border-color: #d08540; }
+
+.search:hover {
+  background-color: #d08540;
+  color: #ffff; }
 
 h2 {
-  margin-top: 5em;
+  color: #d08540;
+  margin-top: 2em;
   margin-bottom: 1em;
   text-align: center;
   font-family: 'Bebas Neue',capital letter;
-  color: #ffff;
-  font-size: 3rem; }
+  font-size: 4.5rem; }
 
 h1 {
-  margin-top: 5em;
-  margin-bottom: 1em;
+  color: #d08540;
+  margin-top: 3em;
+  margin-bottom: 3rem;
   text-align: center;
   font-family: 'Bebas Neue', capital letter;
-  color: #ffff;
-  font-size: 3rem; }
+  font-size: 4.5rem; }
 
 .h1 {
+  color: #d08540;
   text-align: center;
   margin-top: 1em;
   font-size: 4rem;
-  font-family: 'Bebas Neue',capital letter;
-  color: #ffff; }
+  font-family: 'Bebas Neue',capital letter; }
 
 .pie-pagina {
   width: 100%;
@@ -435,26 +501,26 @@ h1 {
         width: 55%;
         margin: auto; } }
 
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
 
-.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+.one-direction-twice-carpenter-r5 {
   display: flex;
   justify-content: center; }
 
-.ids-itiel-agape-alex, .grid-podcast .grid-albums {
+.ids-itiel-agape-alex {
   display: flex;
   justify-content: center; }
 
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90, .grid-mix .grid-mix {
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
   display: flex;
   justify-content: center; }
