--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -5,9 +5,10 @@
 }
 
 .title{
-    font-family:'Bebas Neue',capital letter;
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
     font-size: 90px;
     margin-top: 2em;
+    color: #ffff;
 }
 
 .start{
@@ -19,17 +20,22 @@
 
 .color-de-fondo{
     background-color: #161719;
-    width: 245px;
+    color: #d08540;
+    border-color: #d08540;
     height: 60px;
     font-size: 2em;
     font-weight: bold;
+}
+.color-de-fondo:hover{
+    background-color: #d08540;
+    color: #ffff;
 }
 .up{
     position: fixed;
     border-radius: 7px;
     width: 50px;
     height: 50px;
-    background-color: #198754;
+    background-color: #d08540;
     color: #161719;
     bottom: 40px;
     right: 50px;
