--- a/scss/partials/_login.scss
+++ b/scss/partials/_login.scss
@@ -1,88 +1,67 @@
-/*HTML LOGIN*/
+/*LOGIN*/
 
-.box{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 450px;
-    padding: 70px;
-    border-radius: 20px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #333333;
-    text-align: center;
-    h1{
-        text-transform: uppercase;
-        font-weight: 500;
-        background-color: #333333;
+.login{
+    margin-top: 3em;
+    height: 70vh;
+    .img-login{
+        background-size: cover;
+        background-position: center center;
+        width: 50%;
     }
-    input[type = "text"], input[type = "password"]{
-        border: 0;
-        background: none;
-        display: block;
-        margin: 20px auto;
-        text-align: center;
-        border: 2px solid #218c74;
-        padding: 14px 10px;
-        width: 200px;
-        outline: none;
-        color: #ffff;
-        border-radius: 24px;
-        transition: 0.25s;
-    }
-    input[type= "text"]:focus, input[type= "password"]:focus{
-        width: 280px;
-        border-color: #474787;
-    }
-    input[type = "submit"]{
-        border: 0;
-        background: none;
-        display: block;
-        margin: 20px auto;
-        text-align: center;
-        border: 2px solid #474787;
-        padding: 14px 40px;
-        outline: none;
-        color: #ffff;
-        border-radius: 24px;
-        transition: 0.25s;
-        cursor: pointer;
-    }
-    input[type = "submit"]:hover{
-        background: #474787;
+    .ingresar{
+        background-color: #161719;
+        width: 30%;
+        .formulario{
+            padding: 2.5em;
+            .welcome{
+                font-size: 3em;
+                margin-top: 0;
+                margin-bottom: 0;
+            }
+            .sesion{
+                color: #c0c4d6;
+                font-size: 20px;
+                text-align: center;
+            }
+            .password-olvidada a{
+                color: #c0c4d6;
+                display: inline-block;
+                margin-top: 0.5em;
+            }
+            .input{
+                label{
+                    display: block;
+                    color: #c0c4d6 ;
+                    font-weight: bold;
+                    margin: 1em 0;
+                }
+                input{
+                    width: 100%;
+                    padding: 6px 14px;
+                    border-radius: 5px;
+                }
+            }
+        }
     }
 }
-@media screen and (max-width:800px) {
-    .box{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        width: 400px;
-        padding: 35px;
-        border-radius: 20px;
-        position: absolute;
-        top: 36%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #333333;
-        text-align: center;
-    }
+.submit{
+    font-weight: bold;
+    color: #d08540;
+    border-color: #d08540;
+    width: 100%;
+    margin-top: 1em;
 }
-@media screen and (max-width:380px) {
-    .box{
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        width: 300px;
-        padding: 40px;
-        border-radius: 20px;
-        position: absolute;
-        top: 36%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #333333;
-        text-align: center;
-    }
+.submit:hover{
+    background-color: #d08540;
+    color: #ffff;
 }
 
-
-
-
-
-
+@media screen and (min-width:768px) {
+    .login{
+        display: flex;
+        justify-content: center;
+    }
+    .img-login{
+        height: auto;
+    }
+}
