--- a/scss/partials/_playlist.scss
+++ b/scss/partials/_playlist.scss
@@ -1,55 +1,36 @@
-/*HTML PLAYLIST*/
+/*PLAYLIST*/
+@import "../variables/variables";
+@import "../sass2.scss/mixins";
+@import "../sass2.scss/extend";
 
-.container-playlist{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 40px 0;
-}
+
 .grid-playlist{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-}
-@media screen and (max-width: 900px) {
-    .container-playlist{
-        width: 100%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-    }
-    .grid-playlist{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 40px;
-        margin-left: 50px;
+    @include grids  ($display, $direction, $centrado-alineado);
+    .playlist{
+        margin-top: 35px;
     }
 }
-@media screen and (max-width: 600px) {
-    .container-playlist{
-        width: 100%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-    }
+
+@media screen and (min-width:768px) {
     .grid-playlist{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 40px;
-        margin-left: 50px;
+        display: $dis;
+        grid-template-columns: repeat(2,1fr);
+        margin-left: $margin-left;
     }
 }
-@media screen and (max-width: 380px) {
-    .container-playlist{
-        width: 100%;
-        max-width: 1200px;
-        margin: auto;
-        padding: 40px 0;
-    }
+
+@media screen and (min-width:1024px) {
     .grid-playlist{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 40px;
-        margin-left: 50px;
+        display: $dis;
+        grid-template-columns: repeat(3,1fr);
+        margin-left: $margin-left;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .grid-playlist{
+        display: $dis;
+        grid-template-columns: repeat(3,1fr);
+        margin-left: 10rem;
     }
 }
