--- a/scss/partials/_shop.scss
+++ b/scss/partials/_shop.scss
@@ -1,4 +1,4 @@
-/*HTML SHOP*/
+/*SHOP*/
 
 .grid-shop{
     display: grid;
@@ -6,7 +6,6 @@
     margin: $margin-left;
     gap: 5em;
     .card {
-
         height: 100%;
         padding: .8em;
         background: #f5f5f5;
@@ -57,14 +56,36 @@
             box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
         }
         .card-button:hover {
-        border: 1px solid  #198754;
-        background-color:  #198754;
+        border: 1px solid  $color;
+        background-color:  $color;
     }
     
     }
 }
 
 
+@media screen and (min-width:300px) {
+    .grid-shop{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (min-width:600px) {
+    .grid-shop{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: $margin-left;
+        gap: 5em;
+    }
+}
 
 
-
+@media screen and (min-width:900px) {
+    .grid-shop{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin: $margin-left;
+        gap: 5em;
+    }
+}
