--- a/scss/sass2.scss/_extend.scss
+++ b/scss/sass2.scss/_extend.scss
@@ -1,22 +1,6 @@
 @import "../variables/variables";
 
 
-
-
-
-.one-direction-twice-carpenter-r5{
-    display: flex;
-    justify-content: center;
+.artist-albums-mix{
+    margin-bottom: $margin-bottom;
 }
-
-
-.ids-itiel-agape-alex{
-    display: flex;
-    justify-content: center;
-}
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90{
-    display: flex;
-    justify-content: center;
-}
-
