--- a/scss/sass2.scss/_mixins.scss
+++ b/scss/sass2.scss/_mixins.scss
@@ -5,6 +5,9 @@
     display: $display;
     flex-direction: $direction;
     align-items: $centrado-alineado;
+    .musica{
+        @extend .artist-albums-mix;
+    }
 }
 
 
