--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
-
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
-
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
 .grid-artist {
   display: flex;
   flex-direction: column;
   align-items: center; }
   .grid-artist .artist {
-    margin-bottom: 35px;
     border-radius: 10px; }
 
 .grid-albums {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .grid-albums .album {
-    margin-bottom: 35px; }
 
 .grid-podcast {
   display: flex;
@@ -49,8 +28,6 @@
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .grid-mix .mix {
-    margin-bottom: 35px; }
 
 @media screen and (min-width: 480px) {
   .grid-artist {
@@ -113,9 +90,10 @@
 
 .bg-image {
   background-image: url("../img/imagen-fondo-concierto.jpg");
-  background-size: 100vw 100vh; }
+  background-size: 100vw 100%; }
 
 .title {
+  font-family: "Bebas Neue", capital letter;
   font-size: 90px;
   margin-top: 2em;
   color: #ffff; }
@@ -164,18 +142,22 @@
     font-weight: bold; } }
 
 /*LOGIN*/
+.contenedor {
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 90%; }
+
 .login {
   margin-top: 3em;
-  height: 70vh; }
+  box-shadow: 2px 2px 10px #000; }
   .login .img-login {
     background-size: cover;
     background-position: center center;
-    width: 50%; }
+    width: 100%; }
   .login .ingresar {
-    background-color: #161719;
-    width: 30%; }
+    background-color: #161719; }
     .login .ingresar .formulario {
-      padding: 2.5em; }
+      padding: 2em; }
       .login .ingresar .formulario .welcome {
         font-size: 3em;
         margin-top: 0;
@@ -213,33 +195,18 @@
   .login {
     display: flex;
     justify-content: center; }
-  .img-login {
-    height: auto; } }
+    .login .img-login {
+      height: auto;
+      width: 60%; }
+    .login .ingresar {
+      width: 40%; } }
 
 /*PLAYLIST*/
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
-
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
-
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
 .grid-playlist {
   display: flex;
@@ -390,29 +357,11 @@
       max-width: 100%;
       margin-bottom: 10px; } }
 
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
-
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
-
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
 * {
   padding: 0%;
@@ -501,26 +450,8 @@ h1 {
         width: 55%;
         margin: auto; } }
 
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
 
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
-
-.one-direction-twice-carpenter-r5 {
-  display: flex;
-  justify-content: center; }
-
-.ids-itiel-agape-alex {
-  display: flex;
-  justify-content: center; }
-
-.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90 {
-  display: flex;
-  justify-content: center; }
+.artist-albums-mix, .grid-artist .musica, .grid-albums .musica, .grid-podcast .musica, .grid-mix .musica, .grid-playlist .musica {
+  margin-bottom: 35px; }
