--- a/scss/partials/_login.scss
+++ b/scss/partials/_login.scss
@@ -1,18 +1,23 @@
 /*LOGIN*/
 
+
+.contenedor{
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 90%;
+}
 .login{
     margin-top: 3em;
-    height: 70vh;
+    box-shadow: 2px 2px 10px #000;
     .img-login{
         background-size: cover;
         background-position: center center;
-        width: 50%;
+        width: 100%;
     }
     .ingresar{
         background-color: #161719;
-        width: 30%;
         .formulario{
-            padding: 2.5em;
+            padding: 2em;
             .welcome{
                 font-size: 3em;
                 margin-top: 0;
@@ -44,6 +49,7 @@
         }
     }
 }
+
 .submit{
     font-weight: bold;
     color: #d08540;
@@ -60,8 +66,12 @@
     .login{
         display: flex;
         justify-content: center;
-    }
-    .img-login{
-        height: auto;
+        .img-login{
+            height: auto;
+            width: 60%;
+        }
+        .ingresar{
+            width: 40%;
+        }
     }
 }
