--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,11 @@
     gap: 5em; } }
 
 @media screen and (min-width: 900px) {
+  .buscador {
+    display: flex;
+    justify-content: end; }
+  .buscar {
+    width: 300px; }
   .grid-shop {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
