--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ h1 {
       background-color: #0d2033;
       text-align: center; }
   .pie-pagina .grupo-2 {
-    margin: 15px;
+    margin: auto;
     text-align: center;
     color: #ffff; }
     .pie-pagina .grupo-2 small {
